<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>

    <string name="toppings">Toppings</string>
    <string name="nameHints">Name</string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity :</string>
    <string name="order">Order</string>

    <string name="orderName">Name: <xliff:g id="name" example="Widi">%s</xliff:g></string>
    <string name="orderAddCream">Add Whipped Cream? <xliff:g id="addWhippedCream" example="true">%s</xliff:g></string>
    <string name="orderAddChoco">Add Chocolate? <xliff:g id="addChoco" example="true">%s</xliff:g></string>
    <string name="orderQuantity">Quantity: <xliff:g id="quantityOfCoffees" example="$10">%s</xliff:g></string>
    <string name="total">Total: <xliff:g id="price" example="$10">%s</xliff:g></string>
    <string name="thankYou">Thank You!</string>
</resources>
